<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FakeJIRA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="google_sign_in">Google sign in</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fake_jira">FAKE JIRA</string>
    <string name="saj_t_feladatok">Saját feladatok</string>
    <string name="el_rhet_feladatok">Elérhető feladatok</string>
    <string name="rtes_t_sek">Értesítések</string>
    <string name="beallitasok">Beállítások</string>
    <string name="profil">Profil</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Available tasks</string>
    <string name="menu_gallery">Own tasks</string>
    <string name="menu_slideshow">Notifications</string>
    <string name="profile">Profile</string>
    <string name="nav_availableTasks">Available tasks</string>
    <string name="nav_profileText">Profile</string>
</resources>