<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fakejira.ui.gallery.OwnTasksFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_owntasks" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fakejira.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fakejira.ui.AvailableTasks.HomeFragment"
        android:label="@string/nav_availableTasks"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_add_task"
            app:destination="@id/nav_add_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_task"
        android:name="com.example.fakejira.ui.AddTaskFragment.AddTaskFragment"
        android:label="Add task"
        tools:layout="@layout/fragment_addtask" >
        <action
            android:id="@+id/action_nav_add_task_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.fakejira.ui.Profile.profileFragment"
        android:label="@string/nav_profileText"
        tools:layout="@layout/fragment_profile" />
</navigation>